[project]
name = "covid-earnings-analysis"
version = "1.0.0"
dependencies = [
    "streamlit==1.29.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "plotly==5.18.0",
    "statsmodels==0.14.1",
    "scipy==1.12.0",
    "openpyxl==3.1.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
